src/test/deca/context/invalid/assign_01_so.deca
// Description:
//    Teste l'affectation et la conversion int -> float.
//
// Resultats:
//    Ligne 12: Not expected type
//
// Historique:
//    cree le 13/01/2023

{
boolean b = false;
int a;
a = b;
}